WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289142
REGRESSION(
288409@main
): Session restore may treat a child frame’s state as the main frame
https://bugs.webkit.org/show_bug.cgi?id=289142
Summary
REGRESSION(288409@main): Session restore may treat a child frame’s state as t...
Charlie Wolfe
Reported
2025-03-04 21:25:59 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-04 21:26:09 PST
<
rdar://problem/146207266
>
Charlie Wolfe
Comment 2
2025-03-04 21:27:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41901
EWS
Comment 3
2025-03-05 09:35:11 PST
Committed
291633@main
(31cf39eea5b4): <
https://commits.webkit.org/291633@main
> Reviewed commits have been landed. Closing PR #41901 and removing active labels.
EWS
Comment 4
2025-03-05 15:35:35 PST
Committed
289651.239@safari-7621-branch
(a12db583c975): <
https://commits.webkit.org/289651.239@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2748 and removing active labels.
EWS
Comment 5
2025-03-11 20:12:13 PDT
Committed
289651.262@safari-7621-branch
(0540ce3c2aac): <
https://commits.webkit.org/289651.262@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2754 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug