REGRESSION(288409@main): Session restore may treat a child frame’s state as the main frame https://bugs.webkit.org/show_bug.cgi?id=289142 rdar://146207266

Reviewed by Pascoe.

After 288409@main, history state is only constructed for navigating frames. If a navigation occurs in a
child frame, the UI process reconstructs the history state for the entire frame tree. However, when
retrieving and restoring session state, this reconstruction can fail for child frame navigations because
frame IDs will have changed after session restoration.

For now, when outputting session state, we should include the entire frame tree for each navigation. This
should restore the previous session restore behavior from before 288409@main.

* Source/WebKit/UIProcess/WebBackForwardList.cpp:
(WebKit::WebBackForwardList::backForwardListState const):
(WebKit::WebBackForwardList::restoreFromState):
* Tools/TestWebKitAPI/Tests/WebKit/WKBackForwardListTests.mm:
(TEST(WKBackForwardList, GoBackToPageAfterNavigatingIframeAndRestoringSession)):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/SiteIsolation.mm:
(TestWebKitAPI::TEST(SiteIsolation, DISABLED_NavigateIframeSameOriginBackForwardAfterSessionRestore)):
(TestWebKitAPI::TEST(SiteIsolation, DISABLED_NavigateIframeCrossOriginBackForwardAfterSessionRestore)):
(TestWebKitAPI::TEST(SiteIsolation, NavigateIframeSameOriginBackForwardAfterSessionRestore)): Deleted.
(TestWebKitAPI::TEST(SiteIsolation, NavigateIframeCrossOriginBackForwardAfterSessionRestore)): Deleted.

Canonical link: https://commits.webkit.org/291633@main